@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{510, 69}, {837, 1098}}</string>
+	<string>{{590, 67}, {881, 1101}}</string>
 </dict>
 </plist>
